Added Facebook Login

--- a/Buyhatke2/app/src/main/res/values/strings.xml
+++ b/Buyhatke2/app/src/main/res/values/strings.xml
@@ -2,4 +2,21 @@
     <string name="app_name">Buyhatke2</string>
     <string name="facebook_app_id">346759099129727</string>
     <string name="fb_login_protocol_scheme">fb346759099129727</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
+    <string name="nav_item_home">Home</string>
+    <string name="nav_item_friends">Friends</string>
+    <string name="nav_item_notifications">Messages</string>
+    <string name="img_carousal">Image Carousal</string>
+    <string name="title_messages">Messages</string>
+    <string name="title_friends">Friends</string>
+    <string name="title_home">Home</string>
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
+        <item>@string/nav_item_friends</item>
+        <item>@string/nav_item_notifications</item>
+    </string-array>
 </resources>
